fixing spacing

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-columns: auto;
   height: 100vh;
-  max-width: initial;
+  /* max-width: initial; */
   margin: auto;
   background-size: cover;
   
