--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,24 +1,19 @@
 .About_text {
-  margin-bottom: 10px;
-  max-width: 64%;
+  margin-bottom: 3%;
+  font-size: 20px;
+  font-family: 'Open Sans';
+  max-width: 60%;
 }
 .About_image {
-  /* max-width: 364px; */
-  width: 364px;
-
-  display: inline-block;
-  /* max-height:233px; */
-  height: 233px;
-
-  /* height: 2%; */
-  /* margin: 10px 10px auto auto; */
+  width: 22.5em;
+  height: 14.5em;
   background-color: var(--gold);
-  /* width: 4%; */
+  margin-right: 2em;
 }
 .About_wrapper {
   box-sizing: border-box;
-  display: inline-flex;
-  margin-bottom: 10px;
+  display: flex;
+  margin: 3%;
   align-items: center;
   justify-content: space-between;
 }
@@ -41,5 +36,4 @@
   box-sizing: border-box;
   justify-content: flex-start;
   max-width: 100vw;
-
 }
